--- a/app/src/main/res/layout/horizontaltabcontent.xml
+++ b/app/src/main/res/layout/horizontaltabcontent.xml
@@ -1,27 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.v7.widget.CardView android:layout_width="130dp"
+    android:layout_height="match_parent"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-
-
-    <TextView
-        android:textColor="#787878"
-        android:textSize="18sp"
-        android:padding="16dp"
-        tools:text ="sjksfdhsfdhkfd"
-        android:id="@+id/txtView"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    card_view:contentPaddingLeft="16dp"
+    card_view:contentPaddingTop="16dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <RelativeLayout
+        android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent">
+
+
+        <TextView
+
+            android:textSize="18sp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            tools:text ="sjksfdhsfdhkfd"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/txtView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginLeft="25dp"
+        android:layout_marginTop="5dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:scaleType="fitXY"
+        android:layout_below="@id/txtView"
         app:srcCompat="@android:drawable/checkbox_off_background"
         android:id="@+id/horizontal_image_view" />
 
 
-</LinearLayout>
+
+
+    </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
